<resources>
    <string name="nostorageperm">Es necesario conceder permisos sobre la memoria para hacer firmas locales</string>
    <string name="yes">S\u00ED</string>
    <string name="no">No</string>
    <string name="app_name">Autofirma App</string>
    <string name="title_activity_cert_chooser">Importar certificado</string>
    <string name="title_activity_choose_sign_file">Seleccione el fichero a firmar</string>
    <string name="presentation_title">Te damos la bienvenida</string>
    <string name="presentation_text">Esta aplicaci\u00F3n permite realizar firmas electr\u00F3nicas en las p\u00E1ginas de los proveedores de servicios que lo soporten.\n\nPara funcionar correctamente debe tener un certificado electr\u00F3nico y su clave privada instalados en su dispositivo, consulte la documentaci\u00F3n de su sistema Android y con su proveedor de servicios de certificaci\u00F3n.</string>
    <string name="import_cert">Importar certificado</string>
    <string name="sign_file">Firmar fichero</string>
    <string name="request_cert">Solicitar certificado</string>
    <string name="appsDialogTitle">Listado de autoridades soportadas</string>
    <string name="appsDialogMessage">Seleccione la autoridad de certificaci\u00F3n a la que desee solicitar su certificado.</string>
    <string name="disclaimer">2025 Gobierno de Espa\u00F1a</string>
    <string name="privacy_policy">Pol\u00EDtica de privacidad</string>
    <string name="privacy_policy_url">https://administracion.gob.es/pag_Home/politicaDePrivacidad.html</string>
    <string name="accessibility_statement">Declaraci\u00F3n de accesibilidad</string>
    <string name="accessibility_statement_desc">Declaraci\u00F3n de accesibilidad. Enlace externo. Se abre en el navegador</string>
    <string name="accessibility_statement_url">http://estaticos.redsara.es/comunes/clientefirmaandroid/1/8/0/declaracion_accesibilidad.pdf</string>
    <string name="main_logo_content_desc">Autofirma App</string>
    <string name="ok">Aceptar</string>
    <string name="close">Cerrar</string>
    <string name="title_activity_sign_data">Firma de datos</string>
    <string name="title_activity_sign_batch">Firma de lote</string>
    <string name="title_activity_select_certificate">Selecci\u00F3n de certificado</string>
    <string name="error_bad_params">No se ha realizado correctamente la invocaci\u00F3n de la aplicaci\u00F3n. Consulte al responsable del tr\u00E1mite.</string>
    <string name="error_server_connect">Ocurri\u00F3 un error en la conexi\u00F3n entre la aplicaci\u00F3n y la p\u00E1gina web.</string>
    <string name="file_chooser_directorio_actual">Directorio actual: %s</string>
    <string name="file_chooser_directorio">Directorio</string>
    <string name="file_chooser_directorio_padre">Directorio padre</string>
    <string name="file_chooser_tamano_del_fichero">Tama\u00F1o:</string>
    <string name="bytes">bytes</string>
    <string name="kilobytes">KB</string>
    <string name="megabytes">MB</string>
    <string name="error_loading_selected_file">Ocurri\u00F3 un error cargando el fichero</string>
    <string name="error_loading_selected_undefined_file">Ocurri\u00F3 un error cargando el fichero</string>
    <string name="error_no_valid_p12">El fichero \"%s\" no es un PKCS#12 v\u00E1lido. Seleccione un nuevo almac\u00E9n para importar.</string>
    <string name="error">Error</string>
    <string name="error_ocurred">¡Algo sali\u00F3 mal!</string>
    <string name="error_reading_dnie">Error en la lectura de tu DNIe</string>
    <string name="error_loading_certs">Error al cargar los certificados</string>
    <string name="title_activity_save_data">Guardar datos</string>
    <string name="saveData">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="allow">Permitir</string>
    <string name="default_saved_filename">datos</string>
    <string name="error_signing">Error durante la operaci\u00F3n de firma</string>
    <string name="error_no_certs">No se han encontrado certificados instalados en su dispositivo.</string>
    <string name="error_title_keystore_empty">No existe ning\u00FAn certificado</string>
    <string name="error_dni_blocked">Su DNI est\u00E1 bloquedado, deber\u00E1 acudir a los Puntos de Actualizaci\u00F3n de las Oficinas de Expedici\u00F3n para poder desbloquearlo. </string>
    <string name="error_title_dni_blocked">DNI bloqueado</string>
    <string name="error_empty_pdf_password">La contrase\u00F1a del PDF no puede estar vac\u00EDa:</string>
    <string name="error_pin_nulo">Error, el PIN del DNI es nulo.</string>
    <string name="error_android_4_1">Android 4.1 y 4.1.1 no permiten que los nombres de certificados contengan caracteres especiales (espacios, guiones, etc.). Modifique el alias de sus certificados al importarlos para evitar este error.</string>
    <string name="error_json">Error al tratar JSON.</string>
    <string name="icon_ca">Icono de la autoridad de certificaci\u00F3n</string>
    <string name="dialog_msg_loading_data">Cargando datos</string>
    <string name="dialog_msg_loading_keystore">Cargando almac\u00E9n de claves</string>
    <string name="dialog_msg_signning">Firmando</string>
    <string name="dialog_pdf_password_title">Documento protegido</string>
    <string name="dialog_pdf_password">Introduzca la contrase\u00F1a:</string>
    <string name="dialog_pdf_bad_password">Contrase\u00F1a incorrecta:</string>
    <string name="dialog_pin">Para poder utilizar el certificado introduzca su c\u00F3digo de seguridad.\n</string>
    <string name="dialog_can">Introduzca su c\u00F3digo CAN para establecer una conexi\u00F3n NFC con su DNIe.\n</string>
    <string name="dialog_title_select_cert">Seleccione un certificado</string>
    <string name="security_code">C\u00F3digo de seguridad</string>
    <string name="security_code_hint">C\u00F3digo CAN. </string>
    <string name="signedfile_title">Resultado de firma</string>
    <string name="signedfile_title_result_error">Resultado de firma: Error al firmar</string>
    <string name="signedfile_title_result_correct">Resultado de firma: Firma correcta</string>
    <string name="signedfile_error">Lo sentimos la firma no se ha podido realizar. Por favor, reint\u00E9ntelo de nuevo.</string>
    <string name="signedfile_correct">La firma se ha realizado correctamente.</string>
    <string name="signedfile_original_location">La firma "%1$s" se ha almacenado en el mismo directorio que el fichero original.</string>
    <string name="signedfile_downloads_location">La firma "%1$s" se ha almacenado en su directorio de descargas.</string>
    <string name="incorrect_pin">PIN incorrecto</string>
    <string name="dialog_alias_cert_text">%1$s\nV\u00E1lido: %2$s\nHasta: %3$s\nEmisor: %4$s</string>
    <string name="accesibility_icon_filetype">Icono del tipo de archivo</string>
    <string name="accesibility_icon_sign_ko">Error en la firma</string>
    <string name="accesibility_icon_sign_ok">Firma correcta</string>
    <string name="accesibility_select_option">Seleccione una opci\u00F3n</string>
    <string name="accesibility_back_parent_folder">Volver a directorio padre</string>
    <string name="accesibility_open_folder">Directorio %1$s</string>
    <string name="accesibility_select_file">Fichero %1$s</string>
    <string name="nfc_approach">Acerque su dispositivo al DNIe</string>
    <string name="can_not_can_be_null">El CAN no puede ser vac\u00EDo o nulo</string>
    <string name="allow_dni3_0_NFC">Permitir firmar con DNIe por NFC</string>
    <string name="validate_SSL_connections">Validar conexiones SSL</string>
    <string name="trusted_domains">Dominios de confianza</string>
    <string name="use_asterisk">Use asterisco (*) al principio o final como comod\u00EDn.</string>
    <string name="accesibility_dialog_can">Introduzca su c\u00F3digo CAN para establecer una conexi\u00F3n NFC con su DNIe. El c\u00F3digo CAN contiene seis d\u00EDgitos y se puede encontrar en la esquina inferior derecha del anverso de su DNI.</string>
    <string name="intro_title">Firma f\u00E1cil y segura</string>
    <string name="intro_text">Firma documentos de forma segura y legal identific\u00E1ndote con tu certificado digital o DNI electr\u00F3nico.</string>
    <string name="start">Comenzar</string>
    <string name="understood">Entendido</string>
    <string name="add_new_cert">A\u00F1adir nuevo certificado</string>
    <string name="what_is_autofirma_for_title">¿Para qu\u00E9 sirve Autofirma?</string>
    <string name="what_is_autofirma_for_desc">Esta aplicaci\u00F3n permite realizar firmas electr\u00F3nicas en las p\u00E1ginas de los proveedores de servicios que lo soporten. Para funcionar correctamente debes instalar un certificado electr\u00F3nico. Consulta la documentaci\u00F3n de su sistema Android y con tu proveedor de servicios de certificaci\u00F3n.</string>
    <string name="how_install_certs">¿C\u00F3mo instalar certificados?</string>
    <string name="load_cert">Carga tu certificado en tu dispositivo o en la nube. Imp\u00F3rtalo a trav\u00E9s de la opci\u00F3n "A\u00F1adir certificado" de la aplicaci\u00F3n.</string>
    <string name="allowed_extensions">Extensiones permitidas: .p12 y .pfx. Recuerda que necesitas la contrase\u00F1a de exportaci\u00F3n de tu certificado, y que \u00E9ste debe de incluir la clave privada. </string>
    <string name="is_my_dnie_suitable"><u>¿Es mi DNI compatible?</u></string>
    <string name="is_my_dnie_suitable_desc">Los DNIe compatibles con este proceso son los &lt;b>DNI 3.0 y 4.0&lt;/b>. Si tienes dudas de cu\u00E1l es el tuyo, puedes consultarlo en el siguiente enlace:</string>
    <string name="dni_portal_text">&lt;u>Portal del DNI electr\u00F3nico. Cuerpo Nacional de Polic\u00EDa&lt;/u></string>
    <string name="dni_portal_text_desc">Portal del DNI electr\u00F3nico. Cuerpo Nacional de Polic\u00EDa. Enlace externo. Se abre en el navegador</string>
    <string name="how_to_do_visible_sign">C\u00F3mo hacer firma visible</string>
    <string name="visible_sign_help_text_1">Autofirma App permite hacer firma visible de documentos PDF que tenga en su dispositivo, en los que aparecer\u00e1 el propietario y emisor del certificado y la fecha y hora de la firma. Puede habilitar la firma visible activando la opci\u00f3n \'Hacer firma visible\' en la secci\u00f3n \'Configuraci\u00f3n de firma\'.</string>
    <string name="visible_sign_help_text_2">Si no desea que su DNI/NIE aparezca visible en el texto de la firma, puede ocultarlo parcialmente activando la opci\u00f3n \'Ofuscar identificadores de usuario de los certificados de las firmas visibles\'.</string>
    <string name="visible_sign_help_text_3">Durante la firma del documento se le mostrar\u00e1 una miniatura del mismo y controles que le permitir\u00e1n navegar entre sus p\u00e1ginas y seleccionar la posici\u00f3n en la que desea incluir la firma.</string>
    <string name="visible_sign_help_text_4">Seleccione el \u00e1rea en la que posicionar la firma y pulse \'Continuar\' para firmar el documento.</string>
    <string name="import_certs_help_text_1">Autofirma App utiliza los certificados del almac\u00e9n de claves de Android para firmar. Puede instalar un nuevo certificado abriendo directamente el fichero .p12 o .pfx con las claves del certificado e introduciendo su contrase\u00f1a. Tambi\u00e9n puede seleccionar ese mismo fichero a trav\u00e9s de la opci\u00f3n \'A\u00f1adir nuevo certificado\' de la pantalla principal de Autofirma App.</string>
    <string name="import_certs_help_text_2">El certificado reci\u00e9n instalado ya estar\u00e1 disponible en su dispositivo y podr\u00e1 usarlo desde Autofirma App para firmar.</string>
    <string name="import_certs_help_text_3">Si no encuentras el fichero de claves en tu m\u00f3vil, puedes envi\u00e1rtelo desde otro dispositivo por correo electr\u00f3nico u otras aplicaciones en la nube.</string>
</resources>