<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
			android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:contentDescription="@string/main_logo_content_desc"
            android:src="@drawable/ic_launcher_foreground" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="0.91"
        android:padding="10dp"
        android:fontFamily="@font/nunitosans"
        android:text="@string/presentation_text"
        android:textColor="#56636D" />

    <TextView
        android:id="@+id/selectOptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:padding="10dp"
        android:textStyle="bold"
        android:text="@string/accesibility_select_option"
        android:fontFamily="@font/merriweatherbold"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/buttonSign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="5dp"
        android:onClick="onClick"
        android:text="@string/sign_file"
        style="@style/ButtonRedLarge" />

    <Button
        android:id="@+id/importCertButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="11dp"
        android:onClick="onClick"
        android:text="@string/add_new_cert"
        android:nextFocusForward="@+id/topHomeToolbar"
        android:imeOptions="actionNext"
        style="@style/ButtonWhiteLarge" />

</LinearLayout>