<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/helpDialogScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/helpDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/radiusdialogbackground"
        app:behavior_hideable="true"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:weightSum="10">

        <TextView
            android:id="@+id/howToUseTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:layout_margin="5dp"
            android:paddingStart="10dp"
            android:fontFamily="@font/nunitosansbold"
            android:text="@string/what_is_autofirma_for_title"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:ellipsize="end"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/iconCloseDialogButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="40dp"
            android:minHeight="40dp"
            android:layout_weight="1"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/close"
            android:background="@drawable/bt_close_dialog_selector" />

    </LinearLayout>

    <TextView
        android:id="@+id/howToUseDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:paddingBottom="10dp"
        android:paddingRight="40dp"
        android:paddingLeft="30dp"
        android:fontFamily="@font/nunitosans"
        android:text="@string/what_is_autofirma_for_desc"
        android:textColor="#56636D"
        android:textSize="13sp"/>

    <TextView
        android:id="@+id/howToInstallCerts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:paddingLeft="30dp"
        android:fontFamily="@font/nunitosansbold"
        android:text="@string/how_install_certs"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/loadCert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:drawableLeft="@drawable/ic_load"
        android:drawablePadding="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="40dp"
        android:paddingLeft="30dp"
        android:fontFamily="@font/nunitosans"
        android:text="@string/load_cert"
        android:textColor="@color/black"
        android:textSize="13sp"/>

    <TextView
        android:id="@+id/allowedExt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:drawableLeft="@drawable/ic_doc"
        android:drawablePadding="10dp"
        android:paddingBottom="20dp"
        android:paddingRight="40dp"
        android:paddingLeft="30dp"
        android:fontFamily="@font/nunitosans"
        android:text="@string/allowed_extensions"
        android:textColor="@color/black"
        android:textSize="13sp"/>

    <Button
        android:id="@+id/agreeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:onClick="onClick"
        android:text="@string/understood"
        style="@style/ButtonRedLarge" />

    </LinearLayout>

</ScrollView>