<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dialog_dimen"
    style="@style/WhiteBackground"
    >

    <TextView
        android:id="@+id/textViewCANTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:textSize="25sp"
        android:accessibilityHeading="true"
        android:textColor="#000000"
        android:text="@string/can_intro"
        />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@android:color/black"
        />

    <TextView 
        android:id="@+id/tvPin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/dialog_can"
        android:contentDescription="@string/accesibility_dialog_can"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_gravity="center_vertical"
        />
    <ImageView
        android:id="@+id/cbPicView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/can_example"
        android:layout_weight="1"
        />
    <TextView
        android:id="@+id/tvPinError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/can_not_can_be_null"
        android:contentDescription="@string/can_not_can_be_null"
        android:textColor="@color/red"
        android:textSize="15sp"
        android:visibility="invisible"
        android:layout_gravity="center_vertical"
        />
    <EditText 
        android:id="@+id/etPin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:textColor="@color/black"
	    android:hint="@string/security_code_hint"
        android:textColorHint="#737373"
        android:layout_gravity="center_vertical"
        android:background="@drawable/edittext_can"
        />

</LinearLayout>