<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/compatibleDniDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/radiusdialogbackground"
    app:behavior_hideable="true"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="30dp">

        <ImageView
            android:id="@+id/iconImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/baseline_info_24"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:paddingBottom="10dp"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:fontFamily="@font/merriweatherbold"
        android:text="@string/is_my_dnie_suitable"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:paddingBottom="20dp"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:fontFamily="@font/nunitosans"
        android:text="@string/is_my_dnie_suitable_desc"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/option_selector">

        <Button
            android:id="@+id/portalButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="01"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:textAllCaps="false"
            android:padding="10dp"
            android:textAlignment="textStart"
            android:fontFamily="@font/nunitosans"
            android:text="@string/dni_portal_text"
            android:contentDescription="@string/dni_portal_text_desc"
            android:onClick="onClick"
            android:textColor="#B44D3D"
            android:textSize="13sp"
            style="@style/ButtonNoBorder"/>

        <ImageView
            android:id="@+id/accesibilityLinkImg"
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:src="@drawable/baseline_open_in_new_24"/>

    </LinearLayout>

    <Button
        android:id="@+id/acceptButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:onClick="onClick"
        android:text="@string/understood"
        style="@style/ButtonRedLarge" />


</LinearLayout>