<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFF3F5"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/spainLogoView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="100dp"
        android:paddingBottom="30dp"
        app:srcCompat="@drawable/read_dni_screen" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/intro_title"
        android:textColor="#000000"
        android:fontFamily="@font/merriweatherbold" />

    <TextView
        android:id="@+id/introText"
        android:layout_width="match_parent"
        android:gravity="center|top"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="0.91"
        android:text="@string/intro_text"
        android:textColor="#56636D"
        android:fontFamily="@font/nunitosans"
        />

    <Button
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="11dp"
        android:onClick="onClick"
        android:text="@string/start"
        style="@style/ButtonRedLarge" />


</LinearLayout>