<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/import_certs_help_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/importCertsHelpToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ToolbarTheme"
        app:navigationIcon="@drawable/nav_back_selector"
        app:popupTheme="@style/AppTheme">

        <TextView
            android:id="@+id/importCertsHelpToolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/how_install_certs"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:ellipsize="none"
            android:singleLine="false"
            android:theme="@style/ToolbarTitle"
            android:maxLines="3"
            />

    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:theme="@style/TextViewSettingsTheme"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/p1Tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunitosans"
                android:text="@string/import_certs_help_text_1"
                android:paddingStart="6dp"/>

            <TextView
                android:id="@+id/p2Tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunitosans"
                android:paddingStart="6dp"
                android:text="@string/import_certs_help_text_2" />

            <TextView
                android:id="@+id/p3Tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunitosans"
                android:paddingStart="6dp"
                android:text="@string/import_certs_help_text_3" />

            <Button
                android:id="@+id/goToImportCertsBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:onClick="onClick"
                style="@style/ButtonRedLarge" />

        </LinearLayout>


    </ScrollView>
</LinearLayout>